@@ -50,7 +50,7 @@ class DetailedStatisticsStrategy extends AbstractStatisticsStrategy {
         if (root != null) {
             var counts = getArray(root, "counts");
             if (!counts.isEmpty()) {
-                Document first = counts.get(0);
+                Document first = counts.getFirst();
                 total = first.getInteger("total", 0);
                 completed = first.getInteger("completed", 0);
             }
